@@ -1,0 +1,8 @@
+#source: group3a.s
+#source: group3b.s
+#ld: -T group.ld
+#readelf: -s
+Symbol table '.symtab' contains .* entries:
+#...
+    .*: 0[0]*1000     0 OBJECT  GLOBAL HIDDEN    . foo
+#...
