@@ -1,3 +1,11 @@
+2006-12-07  H.J. Lu <hjl@gnu.org>
+
+	PR ld/3666
+	* ld-elf/group3a.d: New file.
+	* ld-elf/group3a.s: Likewise.
+	* ld-elf/group3b.d: Likewise.
+	* ld-elf/group3b.s: Likewise.
+
 2006-12-05  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-alpha/tlspic.rd: Update for unused section removal.
